# OpenGL-Core

./: CMakeLists.txt  OpenGL.h  README.md  test.cpp  test2.cpp
include/: App.cpp  App.h  AttributeArray.cpp  AttributeArray.h  CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  filesystem.h  glad.c  main.cpp  shaders.cpp  shaders.h  shaders_EASTL.h
include/Ray-Tracing/: CMakeLists.txt  color.h  precision.h  ray.h
include/imgui/: CMakeLists.txt
