
add_library(imgui imgui.cpp)

add_library(imgui_demo imgui_demo.cpp)

add_library(imgui_draw imgui_draw.cpp)

add_library(imgui_impl_glfw imgui_impl_glfw.cpp)

add_library(imgui_impl_opengl3 imgui_impl_opengl3.cpp)

add_library(imgui_tables imgui_tables.cpp)

add_library(imgui_widgets imgui_widgets.cpp)
